--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,10 @@
     <meta name="screen-orientation" content="landscape"/>
     <title>Home</title>
     <!--<link rel="stylesheet" href="../css/base.css">-->
-    <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date    ).getTime() + '">')</script>
+    <script>document.write('<link rel="stylesheet" href="../css/base.css?t=' + (new Date).getTime() + '">')</script>
+    <script>
+        var diff = '';
+    </script>
 </head>
 <body>
 <div class="loading"></div>
@@ -45,7 +48,7 @@
             <i class="value second">600</i><i class="unit second"></i>
         </div>
         <div class="words hide font-it" id="votes">
-            No measure of time<br>with you <br>will be long enough<br>but <br>let's start forever
+            No measure of time<br>with you<br>will be long enough<br>but <br>let's start forever
         </div>
     </div>
     <div class="love-story hide rotateY-90 font-it" data-init="typeIn">
@@ -75,39 +78,56 @@ In exchange for mine
     </div>
     <div class="album rotateY-90" data-init="albumShow">
         <ul class="bg-pink" id="album-ul">
-            <li><img src="../images/photos/0.jpg"><p>One line description 1</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 2</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 3</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 4</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 5</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 6</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 7</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 8</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 9</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 10</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 11</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 12</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 13</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 14</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 15</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 16</p></li>
-            <li><img src="../images/photos/0.jpg"><p>One line description 17</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 1</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 2</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 3</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 4</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 5</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 6</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 7</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 8</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 9</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 10</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 11</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 12</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 13</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 14</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 15</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 16</p></li>
+            <li><img src="../images/photos/0.jpg">
+                <p>One line description 17</p></li>
         </ul>
     </div>
     <script>
-//        document.write('<style>');
-//
-//        function delay(i) {
-//            return (0.05 * (i - 1)).toFixed(1);
-//        }
-//        for (var i = 1; i<=17 ; i++) {
-//            document.write('\n#album-ul.photo-in li:nth-child('+i+') {\n\
-//            animation: photosIn 0.5s ease-in-out '+delay(i)+'s;\n\
-//            -webkit-animation: photosIn 0.5s ease-in-out '+delay(i)+'s;\n\
-//            animation-fill-mode: backwards;\n\
-//            }');
-//        }
-//        document.write('</style>');
+        //        document.write('<style>');
+        //
+        //        function delay(i) {
+        //            return (0.05 * (i - 1)).toFixed(1);
+        //        }
+        //        for (var i = 1; i<=17 ; i++) {
+        //            document.write('\n#album-ul.photo-in li:nth-child('+i+') {\n\
+        //            animation: photosIn 0.5s ease-in-out '+delay(i)+'s;\n\
+        //            -webkit-animation: photosIn 0.5s ease-in-out '+delay(i)+'s;\n\
+        //            animation-fill-mode: backwards;\n\
+        //            }');
+        //        }
+        //        document.write('</style>');
     </script>
 </div>
 </body>
