--- a/views/index.html
+++ b/views/index.html
@@ -42,17 +42,23 @@
         </div>
         <div id="timing-being-together" class="hide font-it">
             <div class="prefix">We have been <b>together</b> for</div>
-            <i class="value day">600</i><i class="unit day"></i>
-            <i class="value hour">600</i><i class="unit hour"></i>
-            <i class="value minute">600</i><i class="unit minute"></i>
-            <i class="value second">600</i><i class="unit second"></i>
+            <i class="value day">00</i><i class="unit day"></i>
+            <i class="value hour">00</i><i class="unit hour"></i>
+            <i class="value minute">00</i><i class="unit minute"></i>
+            <i class="value second">00</i><i class="unit second"></i>
         </div>
         <div class="words hide font-it" id="votes">
             No measure of time<br>with you<br>will be long enough<br>but <br>let's start forever
         </div>
     </div>
     <div class="love-story hide rotateY-90 font-it" data-init="typeIn">
-        <pre>
+        <div id="timing-love-story" class="font-it">
+            <div class="prefix">We have been <b>known each other</b> for</div>
+            <i class="value year">00</i><i class="unit year"></i>
+            <i class="value month">00</i><i class="unit month"></i>
+            <i class="value day">00</i><i class="unit day"></i>
+        </div>
+        <pre class="hide">
 You know when I said I knew little about love?
 Well,that wasn't true
 I know a lot about love
@@ -78,41 +84,31 @@ In exchange for mine
     </div>
     <div class="album rotateY-90" data-init="albumShow">
         <ul class="bg-pink" id="album-ul">
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 1</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 2</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 3</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 4</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 5</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 6</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 7</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 8</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 9</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 10</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 11</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 12</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 13</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 14</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 15</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 16</p></li>
-            <li><img src="../images/photos/0.jpg">
-                <p>One line description 17</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 1</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 2</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 3</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 4</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 5</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 6</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 7</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 8</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 9</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 10</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 11</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 12</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 13</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 14</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 15</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 16</p></li>
+            <li><img src="../images/photos/0.jpg"><p>One line description 17</p></li>
         </ul>
+    </div>
+    <!--<div class="movie rotateY-90" id="love-movie">-->
+
+    <!--</div>-->
+    <div class="invitation">
+        It would be an honor to have you with us to witness the sacred bounding of our wedding
+        <textarea name="words" id="" cols="30" rows="10"></textarea>
     </div>
     <script>
         //        document.write('<style>');
