--- a/views/index.html
+++ b/views/index.html
@@ -11,10 +11,10 @@
         var diff = '';
     </script>
 </head>
-<body ondragstart="return false;">
+<body>
 <div class="loading"></div>
 <div id="container"></div>
-<div class="wrapper" style="z-index: 9999;">
+<div class="wrapper">
     <div class="welcome">
         <div class="circle" id="circle-flowers">
             <div class="img-1"></div>
@@ -106,10 +106,10 @@ In exchange for mine
     <!--<div class="movie rotateY-90" id="love-movie">-->
 
     <!--</div>-->
-    <div class="invitation">
-        It would be an honor to have you with us to witness the sacred bounding of our wedding
-        <textarea name="words"></textarea>
-    </div>
+    <!--<div class="invitation rotateY-90">-->
+        <!--It would be an honor to have you with us to witness the sacred bounding of our wedding-->
+        <!--<textarea name="words"></textarea>-->
+    <!--</div>-->
     <script>
         //        document.write('<style>');
         //
@@ -125,6 +125,12 @@ In exchange for mine
         //        }
         //        document.write('</style>');
     </script>
+</div>
+<div id="menu">
+    <div id="touch">
+        <div><div><div></div></div></div>
+    </div>
+    <div id="items"></div>
 </div>
 </body>
 <script>
