--- a/views/index.html
+++ b/views/index.html
@@ -127,8 +127,13 @@ In exchange for mine
     </script>
 </div>
 <div id="menu">
-    <div id="touch">
+    <div id="touch" class="hide">
         <div><div><div></div></div></div>
+    </div>
+    <div id="touch-us">
+        <div>
+            <div class="her"></div><div class="me"></div>
+        </div>
     </div>
     <div id="items"></div>
 </div>
