--- a/css/base.css
+++ b/css/base.css
@@ -641,21 +641,21 @@ ul#album-ul.photo-in {
     position: absolute;
     right: 2rem;
     bottom: 2rem;
-    border-radius: 50%;
+    border-radius: 10px;
     box-shadow: 0 0 10px black;
     overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 100;
 }
-
 
 #touch-us > div {
     width: 100%;
     height: 100%;
     animation-fill-mode: forwards !important;
-    position: relative;
-    border-radius: 50%;
 }
 
 #touch-us > div > div {
+    transform: translateZ(0);
     position: relative;
     top: 0;
     right: 0;
@@ -677,19 +677,19 @@ ul#album-ul.photo-in {
     background-image: url(../images/me.png);
 }
 
-#touch-us.kiss .her {
+.kiss > #touch-us .her {
     -webkit-animation: herKiss 0.5s ease-out;
     animation: herKiss 0.5s ease-out;
 }
 
-#touch-us.kiss .me {
+.kiss > #touch-us .me {
     -webkit-animation: meKiss 0.5s ease-out;
     animation: meKiss 0.5s ease-out;
 }
 
-#touch-us.kiss > div {
-    -webkit-animation: zoomOut 0.5s ease-out;
-    animation: zoomOut 0.5s ease-out;
+.kiss > #touch-us > div {
+    -webkit-animation: zoomIn 0.5s ease-out;
+    animation: zoomIn 0.5s ease-out;
 }
 
 @keyframes herKiss {
@@ -721,14 +721,87 @@ ul#album-ul.photo-in {
     }
 }
 
-@keyframes zoomOut {
+@keyframes zoomIn {
     to {
         transform: scale(1.3);
     }
 }
 
-@-webkit-keyframes zoomOut {
+@-webkit-keyframes zoomIn {
     to {
         -webkit-transform: scale(1.3);
+    }
+}
+
+#cover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: none;
+    z-index: 1;
+}
+
+.kiss #cover {
+    display: block;
+    animation: fadeIn 0.5s linear;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+#items {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.kiss #items {
+    display: block;
+    animation: fadeSlideIn 0.5s ease-in 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeSlideIn {
+    from {
+        opacity: 0;
+        top: -20px;
+    }
+    to {
+        opacity: 1;
+        top: 0;
+    }
+}
+
+@-webkit-keyframes fadeSlideIn {
+    from {
+        opacity: 0;
+        top: -30px;
+    }
+    to {
+        opacity: 1;
+        top: 0;
     }
 }
