--- a/views/index.html
+++ b/views/index.html
@@ -135,7 +135,12 @@ In exchange for mine
             <div class="her"></div><div class="me"></div>
         </div>
     </div>
-    <div id="items"></div>
+    <div id="cover"></div>
+    <div id="items">
+        <div class="item-1">时间是最好的证明</div>
+        <div class="item-2">故事也必不可少</div>
+        <div class="item-3">幸福刻在我们心上</div>
+    </div>
 </div>
 </body>
 <script>
