--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
             No measure of time<br>with you<br>will be long enough<br>but <br>let's start forever
         </div>
     </div>
-    <div class="love-story hide rotateY-90 font-it" data-init="typeIn">
+    <div class="love-story hide rotateY-90 font-it" data-init="typeIn1">
         <div id="timing-love-story" class="font-it">
             <div class="prefix">We have been <b>known each other</b> for</div>
             <i class="value year">00</i><i class="unit year"></i>
